# python-tutorial

./: .pylintrc  README.md  pyproject.toml  training.md
async/: 01_download_impg.py  02_基於協程下載圖片.py  03_異步編程-async.py  04_異步編程-await.py  05_異步編程-await2.py  06_異步編程-await3.py  07_Task對象.py  08_Task對象2.py  09_Future.py  10_thread_pool.py  11_thread_pool2.py  12_async_context_manager.py  13_redis.py
container/: 01_列表_定義列表.py  02_列表_下標(索引值).py  02_列表_下標索引值.py  03_列表_增刪改查.py  04_列表_常用方法.py  05_列表_常用內建函式.py  06_列表_迴圈遍歷.py  07_列表_小練習.py  08_元組.py  09_函式_解包列表或元組傳參.py  10_函式_綜合案例(優化版).py  11_字串(資料容器角度).py  11_字串（資料容器角度）.py  12_序列的切片操作.py  13_序列的其他操作.py  14_集合_定義集合.py  15_集合_增刪改查.py  16_集合_常用方法.py  17_集合_數學運算.py  18_集合_迴圈遍歷.py  19_字典_定義字典.py  20_字典_增刪改查.py  21_字典_常用方法.py  22_字典_迴圈遍歷.py  23_資料容器_通用操作.py  24_資料容器_小練習.py
decorator/: 01_basic.py  02_函式裝飾器.py  03_類別裝飾器.py
exception/: 01_錯誤與異常.py  02_異常處理.py  03_手動拋出異常.py  04_異常傳遞機制.py  05_自定義異常.py
function/: 01_重新認識函式.py  02_多返回值_參數的打包與解包.py  03_高階函式.py  04_條件表達式.py  05_匿名函式.py  06_資料處理_map函式.py  07_資料處理_filter函式.py  08_資料處理_sorted函式.py  09_資料處理_reduce函式.py  10_列表推導式.py  11_常用內建函式.py  12_淺拷貝_深拷貝.py  13_四種作用域.py  14_閉包.py  17_變數類型註解.py  18_函式類型註解.py
function-demo/: 01_函数_關鍵字參數.py  05_函数_限制傳參方式.py  06_函數_可選參數.py  07_函數_可變參數.py  10_函數_全局作用域_局部作用域.py
generator/: 01_生成器.py
iterator/: 01_初識迭代器.py  02_手寫迭代器.py  03_迭代器的優勢.py
memory/: 01_記憶體分析.py  21_記憶體分析.py
module/: 01_模塊.py  01_模組.py  02_標準庫模塊.py  03_包.py  order.py  pay.py
object-oriented/: 01_類別的定義.py  02_建立實例.py  03_自訂方法.py  04_實例屬性.py  05_類屬性.py  06_實例方法.py  07_類方法.py  (+13 more)
(+36 files in other folders)
