[project]
name = "python-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.9.2",
    "aiohttp>=3.13.2",
    "cn2an>=0.5.23",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.128.0",
    "requests>=2.32.5",
    "tortoise-orm[asyncpg]>=0.25.3",
    "uvicorn>=0.40.0",
]
